joinGroup: fixed double scrollbars

--- a/client/app/components/_joinGroup/joinGroup.styl
+++ b/client/app/components/_joinGroup/joinGroup.styl
@@ -8,7 +8,7 @@ md-dialog
     height: 80%
 
 join-group
-  overflow: scroll
+  overflow: hidden
   height: 100%
   .description
     margin-left: 2em
